tests/snapshots/yaml_suite_snapshots__yaml_suite_4UYU_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Colon in Double Quoted String
  from: NimYAML tests
  tags: mapping scalar 1.3-err
  yaml: "\"foo: bar\\\": baz\"\n"
  tree: "+STR\n +DOC\n  =VAL \"foo: bar\": baz\n -DOC\n-STR\n"
  json: "\"foo: bar\\\": baz\"\n"
