tests/snapshots/yaml_suite_snapshots__yaml_suite_4UYU_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- from: NimYAML tests
  json: "\"foo: bar\\\": baz\"\n"
  name: Colon in Double Quoted String
  tags: mapping scalar 1.3-err
  tree: "+STR\n +DOC\n  =VAL \"foo: bar\": baz\n -DOC\n-STR\n"
  yaml: "\"foo: bar\\\": baz\"\n"
