tests/snapshots/yaml_suite_snapshots__yaml_suite_4V8U_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Plain scalar with backslashes
  from: "@perlpunk"
  tags: scalar
  yaml: "---\nplain\\value\\with\\backslashes\n"
  tree: "+STR\n +DOC ---\n  =VAL :plain\\\\value\\\\with\\\\backslashes\n -DOC\n-STR\n"
  json: "\"plain\\\\value\\\\with\\\\backslashes\"\n"
  dump: "--- plain\\value\\with\\backslashes\n"
