tests/snapshots/yaml_suite_snapshots__yaml_suite_4V8U_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "--- plain\\value\\with\\backslashes\n"
  from: "@perlpunk"
  json: "\"plain\\\\value\\\\with\\\\backslashes\"\n"
  name: Plain scalar with backslashes
  tags: scalar
  tree: "+STR\n +DOC ---\n  =VAL :plain\\\\value\\\\with\\\\backslashes\n -DOC\n-STR\n"
  yaml: "---\nplain\\value\\with\\backslashes\n"
