tests/snapshots/yaml_suite_snapshots__yaml_suite_4ZYM_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 6.4. Line Prefixes
  from: "http://www.yaml.org/spec/1.2/spec.html#id2778720"
  tags: spec scalar literal double upto-1.2 whitespace
  yaml: "plain: text\n  lines\nquoted: \"text\n  —»lines\"\nblock: |\n  text\n   »lin…"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :plain\n   =VAL :text lines\n   =VAL :quoted…"
  json: "{\n  \"plain\": \"text lines\",\n  \"quoted\": \"text lines\",\n  \"block\": \"te…"
  dump: "plain: text lines\nquoted: \"text lines\"\nblock: \"text\\n \\tlines\\n\"\n"
  emit: "plain: text lines\nquoted: \"text lines\"\nblock: |\n  text\n   »lines\n"
